--- a/linear-cpu-stress.yaml
+++ b/linear-cpu-stress.yaml
@@ -8,7 +8,7 @@ spec:
   templates:
   - name: entry
     templateType: Serial
-    deadline: 11h40m
+    deadline: 12h10m
     children:
     - suspending1
     - suspending2
@@ -70,6 +70,16 @@ spec:
     - 96percent-cpu
     - 98percent-cpu
     - 100percent-cpu
+    - 102percent-cpu
+    - 104percent-cpu
+    - 106percent-cpu
+    - 108percent-cpu
+    - 110percent-cpu
+    - 112percent-cpu
+    - 114percent-cpu
+    - 116percent-cpu
+    - 118percent-cpu
+    - 120percent-cpu
   - name: suspending1
     templateType: Suspend
     deadline: 1h
@@ -108,7 +118,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -124,7 +134,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -140,7 +150,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -156,7 +166,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -172,7 +182,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -188,7 +198,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -204,7 +214,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -220,7 +230,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -236,7 +246,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -252,7 +262,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -268,7 +278,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -284,7 +294,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -300,7 +310,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -316,7 +326,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -332,7 +342,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -348,7 +358,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -364,7 +374,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -380,7 +390,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -396,7 +406,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -412,7 +422,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -428,7 +438,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -444,7 +454,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -460,7 +470,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -476,7 +486,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -492,7 +502,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -508,7 +518,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -524,7 +534,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -540,7 +550,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -556,7 +566,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -572,7 +582,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -588,7 +598,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -604,7 +614,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -620,7 +630,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -636,7 +646,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -652,7 +662,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -668,7 +678,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -684,7 +694,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -700,7 +710,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -716,7 +726,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -732,7 +742,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -748,7 +758,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -764,7 +774,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -780,7 +790,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -796,7 +806,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -812,7 +822,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -828,7 +838,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -844,7 +854,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -860,7 +870,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -876,7 +886,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -892,11 +902,171 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
       stressors:
         cpu:
           workers: 100
+          load: 1
+  - name: 102percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 102
+          load: 1
+  - name: 104percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 104
+          load: 1
+  - name: 106percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 106
+          load: 1
+  - name: 108percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 108
+          load: 1
+  - name: 110percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 110
+          load: 1
+  - name: 112percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 112
+          load: 1
+  - name: 114percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 114
+          load: 1
+  - name: 116percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 116
+          load: 1
+  - name: 118percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 118
+          load: 1
+  - name: 120percent-cpu
+    templateType: StressChaos
+    deadline: 3m
+    stressChaos:
+      selector:
+        namespaces:
+        - alms
+        labelSelectors:
+          app.kubernetes.io/name: userhandlers
+        podPhaseSelectors:
+        - Running
+      mode: all
+      stressors:
+        cpu:
+          workers: 120
           load: 1
