--- a/linear-memory-stress.yaml
+++ b/linear-memory-stress.yaml
@@ -94,7 +94,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -111,7 +111,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -128,7 +128,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -145,7 +145,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -162,7 +162,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -179,7 +179,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -196,7 +196,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -213,7 +213,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -230,7 +230,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -247,7 +247,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -264,7 +264,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -281,7 +281,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -298,7 +298,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -315,7 +315,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -332,7 +332,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -349,7 +349,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -366,7 +366,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -383,7 +383,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -400,7 +400,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -417,7 +417,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -434,7 +434,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -451,7 +451,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -468,7 +468,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -485,7 +485,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -502,7 +502,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -519,7 +519,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -536,7 +536,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -553,7 +553,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -570,7 +570,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -587,7 +587,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -604,7 +604,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -621,7 +621,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -638,7 +638,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -655,7 +655,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -672,7 +672,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
@@ -689,7 +689,7 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userhandlers
         podPhaseSelectors:
         - Running
       mode: all
