--- a/linear-network-loss-userapi.yaml
+++ b/linear-network-loss-userapi.yaml
@@ -2,7 +2,7 @@ apiVersion: chaos-mesh.org/v1alpha1
 kind: Workflow
 metadata:
   namespace: alms
-  name: identity-linear-network-corrupt
+  name: linear-network-loss-userapi
 spec:
   entry: entry
   templates:
@@ -11,34 +11,34 @@ spec:
     deadline: 2h30m
     children:
     - suspending1
-    - 10-corrupt
-    - 15-corrupt
-    - 20-corrupt
-    - 25-corrupt
-    - 30-corrupt
-    - 35-corrupt
-    - 40-corrupt
-    - 45-corrupt
-    - 50-corrupt
-    - 55-corrupt
-    - 60-corrupt
-    - 65-corrupt
-    - 70-corrupt
-    - 75-corrupt
-    - 80-corrupt
-    - 85-corrupt
-    - 85-corrupt
-    - 85-corrupt
-    - 85-corrupt
-    - 85-corrupt
-    - 85-corrupt
-    - 85-corrupt
-    - 85-corrupt
-    - 85-corrupt
+    - 20-loss
+    - 25-loss
+    - 30-loss
+    - 35-loss
+    - 40-loss
+    - 45-loss
+    - 50-loss
+    - 55-loss
+    - 60-loss
+    - 65-loss
+    - 70-loss
+    - 75-loss
+    - 80-loss
+    - 85-loss
+    - 90-loss
+    - 95-loss
+    - 95-loss
+    - 95-loss
+    - 95-loss
+    - 95-loss
+    - 95-loss
+    - 95-loss
+    - 95-loss
+    - 95-loss
   - name: suspending1
     templateType: Suspend
     deadline: 30m
-  - name: 10-corrupt
+  - name: 20-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -46,13 +46,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '10'
+      action: loss
+      loss:
+        loss: '20'
         correlation: '0'
       direction: to
       target:
@@ -60,7 +60,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 15-corrupt
+  - name: 25-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -68,13 +68,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '15'
+      action: loss
+      loss:
+        loss: '25'
         correlation: '0'
       direction: to
       target:
@@ -82,7 +82,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 20-corrupt
+  - name: 30-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -90,13 +90,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '20'
+      action: loss
+      loss:
+        loss: '30'
         correlation: '0'
       direction: to
       target:
@@ -104,7 +104,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 25-corrupt
+  - name: 35-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -112,13 +112,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '25'
+      action: loss
+      loss:
+        loss: '35'
         correlation: '0'
       direction: to
       target:
@@ -126,7 +126,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 30-corrupt
+  - name: 40-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -134,13 +134,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '30'
+      action: loss
+      loss:
+        loss: '40'
         correlation: '0'
       direction: to
       target:
@@ -148,7 +148,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 35-corrupt
+  - name: 45-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -156,13 +156,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '35'
+      action: loss
+      loss:
+        loss: '45'
         correlation: '0'
       direction: to
       target:
@@ -170,7 +170,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 40-corrupt
+  - name: 50-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -178,13 +178,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '40'
+      action: loss
+      loss:
+        loss: '50'
         correlation: '0'
       direction: to
       target:
@@ -192,7 +192,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 45-corrupt
+  - name: 55-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -200,13 +200,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '45'
+      action: loss
+      loss:
+        loss: '55'
         correlation: '0'
       direction: to
       target:
@@ -214,7 +214,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 50-corrupt
+  - name: 60-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -222,13 +222,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '50'
+      action: loss
+      loss:
+        loss: '60'
         correlation: '0'
       direction: to
       target:
@@ -236,7 +236,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 55-corrupt
+  - name: 65-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -244,13 +244,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '55'
+      action: loss
+      loss:
+        loss: '65'
         correlation: '0'
       direction: to
       target:
@@ -258,7 +258,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 60-corrupt
+  - name: 70-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -266,13 +266,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '60'
+      action: loss
+      loss:
+        loss: '70'
         correlation: '0'
       direction: to
       target:
@@ -280,7 +280,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 65-corrupt
+  - name: 75-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -288,13 +288,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '65'
+      action: loss
+      loss:
+        loss: '75'
         correlation: '0'
       direction: to
       target:
@@ -302,7 +302,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 70-corrupt
+  - name: 80-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -310,13 +310,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '70'
+      action: loss
+      loss:
+        loss: '80'
         correlation: '0'
       direction: to
       target:
@@ -324,7 +324,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 75-corrupt
+  - name: 85-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -332,13 +332,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '75'
+      action: loss
+      loss:
+        loss: '85'
         correlation: '0'
       direction: to
       target:
@@ -346,7 +346,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 80-corrupt
+  - name: 90-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -354,13 +354,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '80'
+      action: loss
+      loss:
+        loss: '90'
         correlation: '0'
       direction: to
       target:
@@ -368,7 +368,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 85-corrupt
+  - name: 95-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -376,13 +376,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '85'
+      action: loss
+      loss:
+        loss: '95'
         correlation: '0'
       direction: to
       target:
@@ -390,7 +390,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 85-corrupt
+  - name: 95-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -398,13 +398,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '85'
+      action: loss
+      loss:
+        loss: '95'
         correlation: '0'
       direction: to
       target:
@@ -412,7 +412,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 85-corrupt
+  - name: 95-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -420,13 +420,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '85'
+      action: loss
+      loss:
+        loss: '95'
         correlation: '0'
       direction: to
       target:
@@ -434,7 +434,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 85-corrupt
+  - name: 95-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -442,13 +442,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '85'
+      action: loss
+      loss:
+        loss: '95'
         correlation: '0'
       direction: to
       target:
@@ -456,7 +456,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 85-corrupt
+  - name: 95-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -464,13 +464,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '85'
+      action: loss
+      loss:
+        loss: '95'
         correlation: '0'
       direction: to
       target:
@@ -478,7 +478,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 85-corrupt
+  - name: 95-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -486,13 +486,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '85'
+      action: loss
+      loss:
+        loss: '95'
         correlation: '0'
       direction: to
       target:
@@ -500,7 +500,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 85-corrupt
+  - name: 95-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -508,13 +508,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '85'
+      action: loss
+      loss:
+        loss: '95'
         correlation: '0'
       direction: to
       target:
@@ -522,7 +522,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 85-corrupt
+  - name: 95-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -530,13 +530,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '85'
+      action: loss
+      loss:
+        loss: '95'
         correlation: '0'
       direction: to
       target:
@@ -544,7 +544,7 @@ spec:
           namespaces:
           - alms
         mode: all
-  - name: 85-corrupt
+  - name: 95-loss
     templateType: NetworkChaos
     deadline: 5m
     networkChaos:
@@ -552,13 +552,13 @@ spec:
         namespaces:
         - alms
         labelSelectors:
-          app.kubernetes.io/name: identity
+          app.kubernetes.io/name: userapi
         podPhaseSelectors:
         - Running
       mode: all
-      action: corrupt
-      corrupt:
-        corrupt: '85'
+      action: loss
+      loss:
+        loss: '95'
         correlation: '0'
       direction: to
       target:
